test/org/midica/testfiles/failing/eff-flow-note-not-allowed-3.midica
INCLUDE inc/instruments.midica


0: pitch_bend_range.note(c).set(2.0)
